--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,3 +1,11 @@
-.edit{
+
+.container{
     background-color: red;
+    width: 500px;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    padding: 100px;
+    flex-direction: column;
+    color:aliceblue
 }
